Unable to click play on mobile bug fix, style fix

--- a/client/src/components/featured/featured.scss
+++ b/client/src/components/featured/featured.scss
@@ -2,6 +2,7 @@
     height: 90vh;
     position: relative;
     @media (max-width: 480px) {
+        min-height: 450px;
         height: 45vh;
     }
 
