--- a/client/src/components/navbar/navbar.scss
+++ b/client/src/components/navbar/navbar.scss
@@ -92,6 +92,9 @@
                         position: absolute;
                     }
                 }
+                @media (max-width: 480px) {
+                    min-width: 75px;
+                }
             }
         }
     }
