--- a/client/src/pages/register/register.scss
+++ b/client/src/pages/register/register.scss
@@ -35,6 +35,10 @@
     }
 
     .container {
+        @media (max-width: 480px) {
+            max-height: 80%;
+        }
+
         width: 100%;
         height: 100%;
         position: absolute;
@@ -43,16 +47,26 @@
         align-items: center;
         justify-content: center;
         color: white;
+        text-align: center;
 
         h1 {
+            @media (max-width: 480px) {
+                font-size: 38px;
+            }
             font-size: 50px;
         }
 
         h2 {
+            @media (max-width: 480px) {
+                font-size: 19px;
+            }
             margin: 20px;
         }
 
         p {
+            @media (max-width: 480px) {
+                font-size: 17px;
+            }
             font-size: 20px;
         }
 
